[package]
name = "proptest-rng"
version = "0.1.0"
edition = "2024"
authors = ["Xuancong Meng <m2462864403@gmail.com>"]
description = "A bridge between proptest and the rand ecosystem — use any::<ProptestRng>() to get a deterministic, Arbitrary-implementing RNG"
license = "MIT"
keywords = ["proptest", "rand", "testing", "property-based-testing", "fake"]
categories = ["development-tools::testing"]
readme = "README.md"
repository = "https://github.com/QuarkPixel/proptest-rng"

[dependencies]
proptest = "1"
rand_core = "0.9"
